Atualiza .gitignore e limpa requirements.txt para deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-# Virtualenv
-venv/
-
-# Arquivos de Banco de Dados
-*.sqlite3
-
 # Python
 __pycache__/
 *.pyc
+venv/
 
-# Outros
+# Django
+db.sqlite3
+staticfiles/
 .env
-media/
+
+# Ferramentas
+railway
