--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,11 @@
-asgiref==3.8.1
-backports.zoneinfo==0.2.1
-dj-database-url==0.5.0
+# requirements.txt
+
 django==4.2.23
-gevent==24.2.1
-greenlet==3.1.1
 gunicorn==23.0.0
-packaging==25.0
-pillow==10.4.0
+dj-database-url==0.5.0
 psycopg2-binary==2.9.10
 python-decouple==3.8
-python-dotenv==1.0.1
-sqlparse==0.5.3
-typing-extensions==4.13.2
 whitenoise==6.7.0
-zope.event==5.0
-zope.interface==7.2
+pillow==10.4.0
+python-dotenv==1.0.1
+gevent
